<resources>
    <string name="app_name" translatable="false">PlayMyLife</string>

    <string name="test" translatable="false">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="test_all" translatable="false">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Curabitur pretium tincidunt lacus. Nulla gravida orci a odio. Nullam varius, turpis et commodo pharetra, est eros bibendum elit, nec luctus magna felis sollicitudin mauris. Integer in mauris eu nibh euismod gravida. Duis ac tellus et risus vulputate vehicula. Donec lobortis risus a elit. Etiam tempor. Ut ullamcorper, ligula eu tempor congue, eros est euismod turpis, id tincidunt sapien risus a quam. Maecenas fermentum consequat mi. Donec fermentum. Pellentesque malesuada nulla a mi. Duis sapien sem, aliquet nec, commodo eget, consequat quis, neque. Aliquam faucibus, elit ut dictum aliquet, felis nisl adipiscing sapien, sed malesuada diam lacus eget erat. Cras mollis scelerisque nunc. Nullam arcu. Aliquam consequat. Curabitur augue lorem, dapibus quis, laoreet et, pretium ac, nisi. Aenean magna nisl, mollis quis, molestie eu, feugiat in, orci. In hac habitasse platea dictumst. </string>
    <string name="test_one_line" translatable="false">Lorem ipsum dolor sit amet</string>
    <string name="test_numeric" translatable="false">114514 1919810</string>

    <string name="title_home">Task</string>
    <string name="title_dashboard">Shop</string>
    <string name="title_notifications">User</string>
    <string name="deadline_text">Deadline: </string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="add_new_task">NEW TASK</string>
    <string name="add_new_good">NEW GOOD</string>
    <string name="no_duration">unlimited</string>
    <string name="name">NAME</string>
    <string name="description">DESCRIPTION</string>
    <string name="reward">REWARD</string>
    <string name="currency">CURRENCY</string>
    <string name="点数">Points</string>
    <string name="心愿">Wishes</string>
    <string name="duration">DURATION</string>
    <string name="cycle_count">Cycle Count</string>
    <string name="total_count">Total Count</string>
    <string name="cycle">CYCLE</string>
    <string name="days">DAY(s)</string>
    <string name="days_small_cap">day(s)</string>
    <string name="cycle_limit">CYCLE LIMIT</string>

    <string name="not_enough_money">Insufficient Balance</string>
    <string name="bought">Bought</string>
    <string name="price">PRICE</string>
</resources>