<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.hardrelice.playmylife.ui.task.TaskFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_task" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.hardrelice.playmylife.ui.shop.ShopFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_shop" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.hardrelice.playmylife.ui.me.MeFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_me" />
</navigation>