<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddTask">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/add_task_tool_bar"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/black"
        android:paddingHorizontal="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/add_task_tool_bar_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/white"
            app:backgroundTint="@color/half_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/add_task_tool_bar_title"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="@string/add_new_task"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/add_task_tool_bar_ok_button"
            app:layout_constraintStart_toEndOf="@id/add_task_tool_bar_cancel_button"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/add_task_tool_bar_ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:textColor="@color/white"
            app:backgroundTint="@color/half_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/second"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_task_tool_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/new_task_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|bottom"
                android:lines="2"
                android:text="@string/name"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_task_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey"
                android:foregroundTint="@color/white"
                android:lines="1"
                android:paddingHorizontal="3dp"
                android:textColor="@color/white"
                android:textCursorDrawable="@drawable/normal_cursor" />

            <TextView
                android:id="@+id/new_task_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|bottom"
                android:lines="2"
                android:text="@string/description"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_task_description_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey"
                android:maxLines="5"
                android:paddingHorizontal="3dp"
                android:textColor="@color/white"
                android:textCursorDrawable="@drawable/normal_cursor" />

            <TextView
                android:id="@+id/new_task_reward"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|bottom"
                android:lines="2"
                android:text="@string/reward"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/new_task_reward_input"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/grey"
                android:paddingHorizontal="5dp"
                tools:listitem="@layout/coin_p" />

            <TextView
                android:id="@+id/new_task_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|bottom"
                android:lines="2"
                android:text="@string/duration"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/duration_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_baseline_timer_24"
                    android:tint="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/new_task_duration_input"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:fontFamily="casual"
                    android:maxLines="1"
                    android:paddingTop="2dp"
                    android:text="00:00:00"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/add_duration_button"
                    app:layout_constraintStart_toEndOf="@+id/duration_icon"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/add_duration_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/grey"
                    android:src="@drawable/ic_baseline_add_24"
                    android:tint="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/new_task_cycle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|bottom"
                android:lines="2"
                android:text="@string/cycle"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/cycle_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_baseline_timelapse_24"
                    android:tint="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/new_task_cycle_input"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:fontFamily="casual"
                    android:maxLines="1"
                    android:paddingTop="2dp"
                    android:text="0"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/cycle_icon"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/new_task_cycle_unit"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:fontFamily="casual"
                    android:maxLines="1"
                    android:paddingTop="2dp"
                    android:text="@string/days"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/add_cycle_button"
                    app:layout_constraintStart_toEndOf="@+id/new_task_cycle_input"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/add_cycle_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/grey"
                    android:src="@drawable/ic_baseline_add_24"
                    android:tint="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/new_task_cycle_limit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|bottom"
                android:lines="1"
                android:text="@string/cycle_limit"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_task_cycle_limit_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey"
                android:foregroundTint="@color/white"
                android:inputType="number"
                android:lines="1"
                android:paddingHorizontal="3dp"
                android:text="0"
                android:textColor="@color/white"
                android:textCursorDrawable="@drawable/normal_cursor" />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>